--- a/1.html
+++ b/1.html
@@ -12,9 +12,48 @@
         <li><a href="3.html">INTERN FAMOUS LINE</a></li>
     </ol>
     <h2><a href="https://m.blog.naver.com/rlacofls63/222193655385" target="_blank" title="DISNEY">DISNEY FAMOUS LINE</a></h2>
+    <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GGrwAAIrUHM?si=ttlKDsX5Ip4J9WSl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </p>
     <p>The past can hurt. But the way I see it, <strong>you can <u>either</u> run from it, or learn from it.</strong> 과거는 아플 수 있지만, 내 생각엔, 과거로부터 도망칠 수도 있고, 배울 수도 있어.  
     To laugh at yourself is to love yourself. 나를 웃게 하는 것이 나 자신을 사랑하는 것이다.</p><p style="margin-top:40px">If you don't know where you want to go, then it doesn't matter which path you take. 네가 어디로 가고 싶은지 모른다는 건 어떤 길이든 선택할 수 있다는 뜻이잖아.   You still have enough time to make your dream come true. 너는 아직 꿈을 이룰 충분한 시간이 있어.   
     <img src="coding.jpg" width="450">
+    </p>
+    <p>
+            <div id="disqus_thread"></div>
+    <script>
+        /**
+        *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+        *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+        /*
+        var disqus_config = function () {
+        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        */
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = 'https://web1-rpjwhme6sf.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </p>
+    <p>
+            <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/689779ff6ec67e192b924f9d/1j27r93dp';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
     </p>
     </body>
 </html>
