--- a/index.html
+++ b/index.html
@@ -16,5 +16,20 @@
     <p>For example, lines from Disney movies often carry messages of hope and perseverance, while lines from the Avengers movies highlight themes of heroism and teamwork. Intern famous lines often reflect the values of learning and adaptability in the workplace.</p>
     <p>These lines not only entertain but also provide insights into human experiences and emotions, making them timeless and relatable across generations.
     </p> 
+    <p>
+            <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/689779ff6ec67e192b924f9d/1j27r93dp';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
+    </p>
     </body>
 </html>
